# ai-product-management

./: .gitignore  AGENTS.md  README.md  overview.md  pyproject.toml  success-metrics.md
agents/: AGENTS.md
agents/configs/: guardrails.example.yml  settings.example.yml
agents/prompts/: adoption-insights-agent.md  compliance-agent.md  exec-brief-agent.md  ingestion-agent.md
data/samples/: hr-policy.md  it-sop.md  sales-faq.md
data/vectors/: .gitignore
docs/: architecture.md  overview.md  references.md  security_compliance.md  success_metrics.md
ops/: .env.example  Makefile  docker-compose.yml
roles/: ai-adoption-change-manager.md  ai-business-analyst.md  ai-program-manager.md  manager-of-ai.md
scripts/: adoption_report.py  agent_runner.py  ingest.py
src/ai_reading/: __init__.py  cli.py  config.py  ingest.py  metrics.py  retrieval.py  text.py
