[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-reading"
version = "0.2.0"
description = "Local-first RAG toolkit for AI Reading"
requires-python = ">=3.9"
authors = [
  {name = "AI Product Team"}
]
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ai_reading"]
